[gd_scene load_steps=22 format=2]

[ext_resource path="res://godot/src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://godot/assets/knights.png" type="Texture" id=2]
[ext_resource path="res://godot/src/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://godot/src/Player/Idle.gd" type="Script" id=4]
[ext_resource path="res://godot/src/Player/Move.gd" type="Script" id=5]
[ext_resource path="res://godot/src/Player/Attack.gd" type="Script" id=6]
[ext_resource path="res://godot/assets/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=7]
[ext_resource path="res://godot/src/Player/WeaponPivot.gd" type="Script" id=8]
[ext_resource path="res://godot/src/CombatActions/Combo.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=7]
resource_name = "Blast"

[sub_resource type="Animation" id=8]
resource_name = "DoubleStab"

[sub_resource type="Animation" id=9]
resource_name = "INIT"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "SlashLR"

[sub_resource type="Animation" id=11]
resource_name = "SlashRL"

[sub_resource type="Animation" id=12]
resource_name = "Spin"

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterPivot:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CharacterPivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="CharacterPivot"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 32 )

[node name="WeaponPivot" type="Position2D" parent="."]

[node name="Weapon" type="KinematicBody2D" parent="WeaponPivot"]
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="WeaponPivot/Weapon"]
position = Vector2( 0, -16 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 320, 16, 16, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/Weapon"]
position = Vector2( 0, -3.36739 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.67533 )
shape = SubResource( 1 )

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "INIT"
anims/Blast = SubResource( 7 )
anims/DoubleStab = SubResource( 8 )
anims/INIT = SubResource( 9 )
anims/SlashLR = SubResource( 10 )
anims/SlashRL = SubResource( 11 )
anims/Spin = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "INIT"
anims/INIT = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/roll_dash = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="CombatActions" type="Node2D" parent="."]

[node name="Combo" parent="CombatActions" instance=ExtResource( 9 )]
[connection signal="transitioned" from="StateMachine" to="." method="_on_StateMachine_transitioned"]
